Damping factor added to 3d city and random spacing fixes

--- a/assets/base.css
+++ b/assets/base.css
@@ -179,7 +179,7 @@ hr {
 
 /** Home page **/
 .project-list {
-  padding: var(--space-xs) 0;
+  margin-top: calc(var(--space-sm) * -1);
 }
 
 .project {
